# findx

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  findx.toml  localindex.toml
.github/scripts/: version.sh
.github/workflows/: docker-publish.yml  post-release-version.yml  release.yml  rust.yml  snapshot.yml
deploy/: Dockerfile.bundle
doc/: dependencies.md
examples/: README.md
src/: bus.rs  chunk.rs  cli.rs  config.rs  embed.rs  events.rs  lib.rs  main.rs  maintain.rs  metadata.rs  reconcile.rs
src/db/: mod.rs
src/extract/: mod.rs
src/fs/: mod.rs
src/index/: mod.rs
src/mirror/: mod.rs
src/search/: mod.rs
src/util/: dashboard.rs  lock.rs  log.rs  logging.rs  mod.rs
tests/: docling_stdout.sh  index_formats.rs
tests/fixtures/: colors.docx  fruits.md  plants.rtf
tools/: README.md
