[package]
name = "findx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
metrics = "0.21"
tantivy = "0.25"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
atty = "0.2"

num_cpus = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1"
serde_json = "1"
fastembed = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
once_cell = "1"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
