[package]
name = "findx"
version = "0.2.3-dev"
edition = "2021"

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
metrics = "0.21"
tantivy = "0.25"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
atty = "0.2"

num_cpus = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
walkdir = "2"
ignore = "0.4"
globset = "0.4"
notify = "6"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1"
serde_json = "1"
# TODO: https://github.com/gaspardpetit/findx/issues/37
# Make the ort-download-binaries (and hf-hub-rustls-tls) optional
fastembed = { version = "5.1.0", default-features = false, features = [
  "hf-hub-rustls-tls",   # HF Hub client over rustls
  "ort-download-binaries" # download ONNX Runtime binaries
]}

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
once_cell = "1"
ctrlc = "3"
crossbeam-channel = "0.5"
sha2 = "0.10"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
